--- a/views/layout-index.jade
+++ b/views/layout-index.jade
@@ -39,7 +39,7 @@ html
            document.getElementById("longResponse").innerHTML = "Done! " + html;
         }
 
-        document.getElementById("button-delayed").onclick = function(){
+        document.getElementById("longHistory").onclick = function(){
 
             setSlowRspMsgStart();
             var messages = 1;
