--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,8 +27,12 @@ a {
     box-shadow: 4px 4px 4px #008899;
 }
 
-#btn{
+#quickHistory{
     font-size: 3em;
+}
+
+#longHistory{
+    margin-top: 1em;
 }
 
 #longResponse{
