--- a/views/layout-index.jade
+++ b/views/layout-index.jade
@@ -35,7 +35,7 @@ html
 
         function setSlowRspMsgEnd(){
 
-           var html = "<select><option value='waitMore'>Wait More</option><option value='result'>Result</option></select>";
+           var html = "<select id='longHistoryOptions'><option value='waitMore'>Wait More</option><option value='result'>Result</option></select>";
            document.getElementById("longResponse").innerHTML = "Done! " + html;
         }
 
