Adding history page with mapping example

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,12 @@ block content
 
   h2= description
 
+  a(id='pricing' href='/pricing') Prices
+
+  br
+  br
+  br
+
   form(action="/history", method="post")
     input(type="submit", value="Quick History", id="quickHistory")
 
