Adding Mongo dependency (WIP) Adding animation js with rotation on logo Moving socket JS to JS file Improving descriptions of element IDs Added JQuery Added map lookup demo to pricing page

--- a/views/history.jade
+++ b/views/history.jade
@@ -9,7 +9,7 @@ block content
 
   h2= description
 
-    div#div1
+    div#intro
         p.
           Parking Lot actually has a long and horrible history, but don't worry
           about your children finding out; We have kid's packs full of toys!
