--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ a {
   color: #00B7FF;
 }
 
-#div1{
+#intro{
    border:2px solid;
    border-radius:30px;
    padding: 10px;
@@ -15,7 +15,7 @@ a {
    text-shadow: 2px 2px 2px #008899;
 }
 
-#div2{
+#longDescription{
     font-size: 14px;
     border:2px solid;
     border-radius:20px;
@@ -42,4 +42,29 @@ a {
 
 #longResponse{
     padding: 2em;
+}
+
+rotate-up{
+
+}
+
+.rotate-right
+{
+    transform: rotate(90deg);
+    -ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Safari and Chrome */
+}
+
+.rotate-down
+{
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Safari and Chrome */
+}
+
+.rotate-left
+{
+    transform: rotate(270deg);
+    -ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Safari and Chrome */
 }
