Separating delayed response from socket behavior as it's all js now. Replacing websocket with socket.io for improved tolerance.

--- a/views/layout-index.jade
+++ b/views/layout-index.jade
@@ -7,6 +7,8 @@ html
   body
     block content
 
-    script(src='http://code.jquery.com/jquery-1.10.2.min.js')
-    script(src='/javascripts/animation.js')
-    script(src='/javascripts/socket.js')
+script(src='http://code.jquery.com/jquery-1.10.2.min.js')
+script(src='/javascripts/animation.js')
+script(src='/javascripts/slow-history.js')
+script(src='/javascripts/socket.js')
+script(src='/socket.io/socket.io.js')
