Refactoring template names adding js sandbox page + script for JS deep dives

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,9 @@ block content
   h2= description
 
   a(id='pricing' href='/pricing') Prices
-
+  br
+  br
+  a(href='/js-sandbox') Javascript Sandbox
   br
   br
   br
