--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
 
   p(id="welcomeMessage") Welcome to #{title}
 
-  img(id='logo' class='rotate-up' src='/images/parking_icon.jpeg')
+  img(id='logo' src='/images/parking_icon.jpeg')
   button(id='rotateIcon') Rotate Icon
 
   h2= description
@@ -33,7 +33,7 @@ block content
         You will have a wonderful time here. Such a great time, your family
         will always come back for more delicious parking. We'd love you to
         stay for a year, but understand if you can only make it for one day.
-        Besides, we make lots of money, and can afford to remain open until
+        Besides, we make lots of money and can afford to remain open until
         the next time you decide to drop in.
 
   br
