--- a/views/layout-js-sandbox.jade
+++ b/views/layout-js-sandbox.jade
@@ -1,9 +1,3 @@
-doctype 5
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+extends child-page
 
 script(src='/javascripts/js-sandbox.js')
